--- a/zhbox/Makefile
+++ b/zhbox/Makefile
@@ -3,12 +3,12 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=zhbox
 PKG_VERSION:=0.0.2
 PKG_RELEASE=1
-PKG_LICENSE:=GPL-3.0
+PKG_LICENSE:=MIT
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/humble-zh/zhbox.git
-PKG_MIRROR_HASH:=8579cf3ae11077c0594682d6866cfdd93d2e238bb9dab1f24e9b9cf4fd26cadc
-PKG_SOURCE_VERSION:=8eadee9aa5f7befa8ff8070d13306af8d0270f48
+PKG_MIRROR_HASH:=9c26c920434fe06f99f2ecae569959be5c078b127213060bceeca729f5dec45a
+PKG_SOURCE_VERSION:=989b4e9273dc977c2cec3a1ab39476e3b73d349d
 
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
@@ -22,11 +22,11 @@ define Package/$(PKG_NAME)
   CATEGORY:=Network
   TITLE:=zhbox just syslog a string helloworld
   URL:=
-  DEPENDS:=+libevent2-core
+  DEPENDS:=+libconfig +libevent2-core +libmosquitto-ssl
 endef
 
 define Package/$(PKG_NAME)/description
-zhbox just syslog a string helloworld
+an iot-edge program connected to the cloud with MQTT
 endef
 
 CMAKE_SOURCE_DIR=$(PKG_BUILD_DIR)
